--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ body {
 }
 
 footer {
+  display: flex;
+  justify-content: space-between;
+  width: 100vw;
   background-color: black;
   height: 75px;
   color: white;
@@ -31,6 +34,7 @@ footer {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  width: 100vw;
   height: 75px;
 }
 #footerright i {
@@ -46,6 +50,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+	width:100vw
   height: 75px;
   background-color: black;
 }
@@ -58,8 +63,10 @@ header .mobileview img {
   background-image: url(../images/img_0.jpg);
   background-size: cover;
   height: 85vh;
+	width: 100vw;
 }
 main .mobileview ul li {
+	height: 5vh;
   padding: 10px 0px;
   text-align: center;
   margin: 10px 0px;
@@ -89,4 +96,186 @@ main .mobileview ul li a {
   text-align: center;
   font-size: 2.5rem;
   text-transform: capitalize;
+}
+/* ================================================= */
+@media screen and (min-width: 400px) {
+  /* Desktop State */
+  .mobileview {
+    display: none;
+  }
+  .desktopView {
+    display: block;
+  }
+
+  /* footer */
+  #footerleft {
+    display: flex;
+    align-items: flex-end;
+    margin-left: 5px;
+    margin-bottom: 10px;
+
+    color: white;
+  }
+
+  #footerright {
+    width: 30vw;
+  }
+  /* header  */
+  header {
+    display: block;
+    width: 100vw;
+    height: 100px;
+    background-color: black;
+  }
+  .warning {
+    height: 25px;
+    color: white;
+    font-size: 14px;
+    text-align: center;
+    padding: 0.5em;
+  }
+  .navbar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+		width:100vw;
+    height: 75px;
+  }
+  #navleft {
+    margin-left: 4rem;
+  }
+  #navleft img {
+    width: 200px;
+    height: 40px;
+  }
+  #navright {
+    margin-right: 4rem;
+  }
+  #navright img {
+    width: 130px;
+    height: 35px;
+  }
+
+  #navmid {
+    display: flex;
+  }
+
+  nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+  }
+  nav ul li {
+    background-color: rgb(200, 15, 46);
+    margin: 0px 2rem;
+    padding: 8px 15px;
+    border-radius: 10px;
+    min-width: 100px;
+    text-align: center;
+    list-style-type: none;
+    transition: 0.2s ease-in-out;
+		cursor: pointer;
+  }
+  nav ul li:hover {
+    transform: scale(1.1);
+  }
+  /* body  */
+  #banner-promo {
+    position: relative;
+    display: block;
+    top: 100px;
+    left: 65vw;
+    width: 375px;
+    height: 250px;
+
+    border: 1px solid black;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transition: 0.2 ease-in-out;
+    cursor: pointer;
+  }
+
+  #banner-promo:hover {
+    transform: scale(1.03);
+    box-shadow: 0px 5px 18px 5px black;
+  }
+
+  .banner-text {
+    position: relative;
+    display: inline-block;
+    width: 375px;
+    top: 200px;
+    left: 65vw;
+    text-align: center;
+    color: rgb(200, 15, 46);
+  }
+  .banner-text h1 {
+    font-size: 2em;
+  }
+  .banner-text p {
+    font-size: 1.25em;
+    text-transform: capitalize;
+  }
+
+  /* order form */
+  .order {
+    position: relative;
+    width: 600px;
+    top: 250px;
+    margin: auto;
+
+    border: 1px solid black;
+    background-color: white;
+    box-shadow: 0px 10px 8px 5px rgba(0, 0, 0, 0.4);
+
+    font-size: 15px;
+    padding: 1em;
+  }
+  .order h1 {
+    color: (200, 15, 46);
+    margin-bottom: 0.5em;
+  }
+	.order h2{
+		font-weight: 400;
+		text-transform: uppercase;
+	}
+  .order h2,
+  p {
+    line-height: 1.5em;
+    margin-bottom: 0.5em;
+  }
+
+  .order form {
+    border: 1px solid black;
+    width: 100%;
+    padding: 1em 0;
+  }
+
+  .order form input [type='text']{
+    width: 60%;
+    border: 1px solid black;
+    border-radius: 5px 0px 0px 5px;
+    margin-left: 10px;
+    margin-right: 0px;
+  }
+
+  .order form input ::placeholder {
+    font-weight: bold;
+    color: lightgrey;
+  }
+
+  .order button {
+    background-color: green;
+    color: white;
+    border: none;
+    border-radius: 0px 5px 5px 0px;
+    margin: none;
+    cursor: pointer;
+  }
+
+  .order form input[type='text'],
+  .order button {
+    padding: 1em;
+    font-weight: bold;
+  }
+  /* ======================================== */
 }
